--- a/description
+++ b/description
@@ -1,1 +1,1 @@
-Unnamed repository; edit this file 'description' to name the repository.
+aws-python repository; edit this file 'description' to name the repository.
